--- a/researchReproducibleAnalysis-healthEconomicImpactStorm.Rmd
+++ b/researchReproducibleAnalysis-healthEconomicImpactStorm.Rmd
@@ -2,10 +2,8 @@
 title: "Health and Economic Damages Caused by Storms in US"
 author: "Kaung Myat Khant"
 date: "`r Sys.Date()`"
-output:
-  html_document:
-    df_print: paged
-  pdf_document:
+output: 
+  html_document:    
     keep_md: true
 ---
 
@@ -56,13 +54,14 @@ The data set has 37 variables with 902,297 observations of storms or severe weat
 -   25."PROPDMG"
 -   26."PROPDMGEXP"
 -   27."CROPDMG"
--   28."CROPDMGEXP"  
+-   28."CROPDMGEXP"
 
-These columns will be selected as a subset before the data analysis. Property damage exponent ("PROPDMGEXP") and crop damage exponent ("CROPDMGEXP") need to be changed to numerical values.  
+These columns will be selected as a subset before the data analysis. Property damage exponent ("PROPDMGEXP") and crop damage exponent ("CROPDMGEXP") need to be changed to numerical values.
 
 ### Data preparation for analysis
 
 Load the libraries required
+
 ```{r library, include=T, results='hide'}
 loadLib <- function(package) {
     if(!require(package, character.only = T)){
@@ -76,27 +75,29 @@ loadLib <- function(package) {
 sapply(c("tidyverse", "stringr", "finalfit"), loadLib)
 ```
 
-
 First, the columns required are selected.
+
 ```{r subset, include=TRUE}
 df <- data %>% 
     select(c("EVTYPE","FATALITIES","INJURIES","PROPDMG","PROPDMGEXP","CROPDMG","CROPDMGEXP"))
 head(df)
 ```
 
-  
-Now check the values.
-```{r checkVariableValue, include=TRUE, results='hide'}
-event <- with(df, sort(unique(EVTYPE)))
+Now check the EVTYPES.
+
+```{r checkVariableValue, include=TRUE}
+with(df, sort(unique(EVTYPE)))
 ```
+
 The event types "?" and those event with zero damage will be filtered.
+
 ```{r filterRows, include=TRUE}
 df <- df %>% 
     filter(EVTYPE != "?" & (FATALITIES > 0 | INJURIES > 0 | PROPDMG > 0 | CROPDMG > 0))
 
 ```
 
-After removing rows with zero damage, the summary were also removed instantly. Now the weather event will be regrouped.
+After removing rows with zero damage, the summary were also removed instantly. Now the weather event will be regrouped. Before regrouping, white spaces were removed and letter cases were converted into upper cases.
 
 ```{r strings, include=TRUE}
 df <- df %>% 
@@ -105,8 +106,10 @@ df <- df %>%
                 EVTYPE = str_to_upper(EVTYPE),
                 ## Remove white spaces
                 EVTYPE = str_squish(EVTYPE))
-```
-
+```  
+  
+#### Regrouping the event types
+Some of the event types were due to typos and some were due to different use of words. So, I consulted with the [Storm Data Documentation](https://d396qusza40orc.cloudfront.net/repdata%2Fpeer2_doc%2Fpd01016005curr.pdf), and regrouped them as much as I could.
 
 ```{r regroup, include = TRUE}
 # regroup events
@@ -532,17 +535,74 @@ df <- df %>%
                                    TRUE ~ EVTYPE))
 ```
 
-
 ```{r properString, include=TRUE}
-unique(df$EVTYPE)
 df$EVTYPE <-  str_to_sentence(df$EVTYPE)
 ```
 
+The exponent values are as defined by the [data documentation](https://d396qusza40orc.cloudfront.net/repdata%2Fpeer2_doc%2Fpd01016005curr.pdf).
+
+```{r expVal, include=TRUE}
+unique(df$PROPDMGEXP)
+unique(df$CROPDMGEXP)
+```
+
+The exponents are defined as followed:
+
+-   "K", "k", "3" = 1000
+
+-   "M", "m", "6" = 10^6^
+
+-   "B" = 10^9^
+
+-   "H", "h", "2" = 100
+
+-   "4" = 10^4^
+
+-   "5" = 10^5^
+
+-   "7" = 10^7^
+
+-   "+", "-", "0", "?", "" = 1  
+
+```{r recodeExp, include=TRUE}
+df <- df %>% 
+    mutate( ## Re-code Property damage exponents
+        PROPDMGEXP = case_when(
+            PROPDMGEXP %in% c("+", "-", "0", "?", "") ~ 1,
+            PROPDMGEXP %in% c("H", "h", "2") ~ 100,
+            PROPDMGEXP %in% c("K", "k", "3") ~ 1000,
+            PROPDMGEXP == "4" ~ 10^4,
+            PROPDMGEXP == "5" ~ 10^5,
+            PROPDMGEXP %in% c("M", "m", "6") ~ 10^6,
+            PROPDMGEXP == "7" ~ 10^7,
+            PROPDMGEXP == "B" ~ 10^9,
+            TRUE ~ as.numeric(PROPDMGEXP)
+        ),
+        ## Re-code Crop damage exponent
+        CROPDMGEXP = case_when(
+            CROPDMGEXP %in% c("+", "-", "0", "?", "") ~ 1,
+            CROPDMGEXP %in% c("H", "h", "2") ~ 100,
+            CROPDMGEXP %in% c("K", "k", "3") ~ 1000,
+            CROPDMGEXP == "4" ~ 10^4,
+            CROPDMGEXP == "5" ~ 10^5,
+            CROPDMGEXP %in% c("M", "m", "6") ~ 10^6,
+            CROPDMGEXP == "7" ~ 10^7,
+            CROPDMGEXP == "B" ~ 10^9,
+            TRUE ~ as.numeric(CROPDMGEXP)
+        ),
+        ## create economic loss columns for property and crops
+        economyLoss_property = PROPDMG*PROPDMGEXP,
+        economyLoss_crop = CROPDMG * CROPDMGEXP,
+        economyLoss_total = economyLoss_property + economyLoss_crop
+    )
+```
 
 
+## Results  
 
-## Results
-```{r healthLost, include=TRUE}
+### Events Harmful to Population Health
+
+```{r healthLost, include=TRUE, fig.cap="Figure 1. Top five harmful events with respect to population health"}
 df %>%
     group_by(EVTYPE) %>% 
     summarise(Fatalities = sum(FATALITIES, na.rm = T),
@@ -557,28 +617,84 @@ df %>%
     geom_col()+
     facet_wrap(~ type, nrow = 3, scales = "free_y")+
     tidytext::scale_y_reordered()+
-    geom_text(aes(label = scales::comma(damage)), size = 3.5, hjust = -0.05)+
+    geom_text(aes(label = scales::comma(damage)), size = 2, hjust = -0.02)+
     scale_fill_manual(values = RColorBrewer::brewer.pal(3, "Accent"))+
     labs(y = "Types of events", x = "Number of casualities")+
     theme_bw()+
-    theme(legend.position = "")
-```
+    theme(legend.position = "",
+          axis.text.x = element_text(size =6))
+```  
 
+  
 
-```{r}
+As shown in the Figure 1, Tornadoes were the top cause of death and injuries. Between 1950 and 2011, tornadoes caused 5,662 deaths and 91,407 injuries. Extreme heat or high temperature took the second place for fatalities with 3,177 deaths while the thunderstorms were the second most frequent cause of injuries with 9,509 injured casualties. Top ten events to damage the population health are shown in Table 1.  
+
+  
+
+```{r tableHealth, include=TRUE}
 df %>%
     group_by(EVTYPE) %>% 
     summarise(Fatalities = sum(FATALITIES, na.rm = T),
-              Injuries = sum(INJURIES, na.rm = T), .groups = "drop") %>% 
-    mutate(Total = Fatalities + Injuries) %>% 
-    pivot_longer(cols = c(Fatalities, Injuries, Total),
+              Injuries = sum(INJURIES, na.rm = T), .groups = "drop") %>%
+    pivot_longer(cols = c(Fatalities, Injuries),
                  names_to = "type",
                  values_to = "damage") %>% 
     group_by(type) %>% 
     slice_max(n = 10, order_by = damage) %>% 
     pivot_wider(names_from = type, values_from = damage, values_fill = 0) %>% 
-    knitr::kable(col.names = c("Event type","Fatalities","Injuries","Total"),
-                 align = c("l","r","r","r"),
-                 caption = "Total number of casualities between 1950 and 2011")
+    knitr::kable(col.names = c("Event type","Fatalities","Injuries"),
+                 align = c("l","r","r"),
+                 caption = "Table 1. Top ten harmful events with respect to population health")
+```  
+
+### Events with Economic Consequences
+
+
+```{r economyLost, include=TRUE, fig.cap="Figure 2. Top five events with greatest economic consequences shown in US dollars"}
+df %>% 
+    group_by(EVTYPE) %>% 
+    summarise(Property = sum(economyLoss_property, na.rm = T),
+              Crop = sum(economyLoss_crop, na.rm = T), .groups = "drop") %>% 
+    mutate(Total = Property+Crop) %>%  
+    pivot_longer(cols = c("Property","Crop","Total"),
+                 names_to = "type",
+                 values_to = "USD") %>% 
+    group_by(type) %>% 
+    slice_max(order_by = USD, n = 5) %>% 
+    ungroup() %>% 
+    ggplot(aes(y = USD, x = tidytext::reorder_within(EVTYPE,-USD,type), fill = type))+
+    geom_col()+
+    scale_y_continuous(limits = c(0,1.8e+11))+
+    facet_wrap(~ type, nrow = 3, scales = "free_x")+
+    tidytext::scale_x_reordered()+
+    geom_text(aes(label = scales::label_dollar()(USD)), vjust = -0.5, size = 3.5)+
+    scale_fill_manual(values = RColorBrewer::brewer.pal(3,"Accent"))+
+    labs(y = "US Dollar", x = "Types of event")+
+    theme_bw()+
+    theme(legend.position = "",
+          axis.text.y = element_blank(),
+          axis.ticks = element_blank())
+```  
+
+According to Figure 2, flood were the major cause of economic loss, with total loss of 160.9 billion US dollars. It also caused property damage worth more than 150 billion US dollars. On the other hand, drought were the major cause of crop loss worth of 14.8 billion US dollar. Top ten events for economic loss were shown in Table 2.  
+
+```{r tableEconomy, include=TRUE}
+df %>% 
+    group_by(EVTYPE) %>% 
+    summarise(Property = sum(economyLoss_property, na.rm = T),
+              Crop = sum(economyLoss_crop, na.rm = T), .groups = "drop") %>%
+    pivot_longer(cols = c("Property","Crop"),
+                 names_to = "type",
+                 values_to = "USD") %>% 
+    group_by(type) %>% 
+    slice_max(order_by = USD, n = 10) %>%
+    ungroup() %>% 
+    mutate(USD = USD/10^9) %>% 
+    pivot_wider(names_from = type, values_from = USD, values_fill = 0) %>%  
+    knitr::kable(col.names = c("Event type","Crop","Property"),
+                 align = c("l","r","r"),
+                 digits = 2,
+                 caption = "Table 2. Top ten events with with greatest economic consequences shown in US dollars (billion)")
 ```
+
 
